# mcp-server-nci-evs

./: .gitignore  README.md  pyproject.toml
docs/: FIX_TYPE_SHADOWING.md
scripts/: test_enum_validation.py  test_integration.py
src/evs_server/: app.py
src/evs_server/models/: __init__.py  concept_status.py  include.py  ncim_definition_source.py  ncim_property.py  ncim_synonym_source.py  ncim_synonym_term_type.py  ncit_definition_source.py  ncit_property.py  ncit_synonym_source.py  ncit_synonym_term_type.py  search_type.py  terminologies.py
src/evs_server/skills/: README.md
src/evs_server/skills/ncim-property-information/: SKILL.md
src/evs_server/skills/ncit-property-information/: SKILL.md
src/evs_server/tools/: __init__.py  get_children.py  get_concepts.py  get_descendants.py  get_parents.py  search_concepts.py
src/evs_server/utils/: __init__.py  enum_list.py  url.py
tests/: __init__.py  test_concept_status.py  test_enum_list_utils.py  test_include.py  test_ncim_definition_source.py  test_ncim_property.py  test_ncim_synonym_source.py  test_ncit_definition_source.py  test_ncit_property.py  test_ncit_synonym_source.py  test_search_type.py  test_terminologies.py  test_url_utils.py
